--- a/style.css
+++ b/style.css
@@ -1,25 +1,34 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
+
 *::before,
 *::after {
   box-sizing: border-box;
 }
-ul,
+
 ol,
+ul,
 menu {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
+html,
+body {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
-  font-weight: 400;
   font-style: normal;
+  font-weight: 400;
 }
 
 .container {
@@ -27,4 +36,71 @@ body {
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  padding: 21px;
+}
+
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-list {
+  display: flex;
+  gap: 38px;
+  align-items: center;
+}
+
+.banner {
+  background-image: url(./img/Backround\ Rectangle.png);
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.header-item {
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.banner h1 {
+  font-size: 55px;
+  font-weight: 300;
+  color: #E9e9e9;
+}
+
+.banner p {
+  font-size: 22px;
+  font-weight: 400;
+  color: #E9e9e9;
+  padding-top: 25px;
+  padding-bottom: 29px;
+}
+
+.btn {
+  background: #28A745;
+  padding: 10px 30px 10px 40px;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  font-size: 18px;
+}
+
+.btn i {
+  margin-right: 6px;
 }
