--- a/style.css
+++ b/style.css
@@ -104,3 +104,43 @@ body {
 .btn i {
   margin-right: 6px;
 }
+
+.services-list {
+  display: flex;
+  padding: 40px 0 20px 0;
+  gap: 70px;
+}
+
+.services-item i {
+  width: 67px;
+  height: 67px;
+  background: #28A745;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.services-item img {
+  max-width: 100%;
+  height: auto;
+}
+
+.services-item {
+  text-align: center;
+  color: #333333;
+}
+
+.services-title {
+  font-size: 20px;
+  padding: 15px 0;
+}
+.solution-inner{
+  display: flex;
+}
+.solution-inner-text{
+  background: #28A745;
+  color: #FFFFFF;
+  
+}
