--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ body {
 }
 
 .btn {
-  background: #28A745;
   padding: 10px 30px 10px 40px;
   color: white;
   border-radius: 5px;
@@ -100,6 +99,10 @@ body {
   justify-content: center;
   font-size: 18px;
   border: none;
+}
+
+.btn-main {
+  background-color: #28A745;
 }
 
 .btn i {
@@ -183,6 +186,7 @@ body {
 .btn-second {
   margin: 0;
   box-shadow: inset 0 0 0 1px #fff;
+  width: fit-content;
 }
 
 .btn-second:hover {
@@ -193,6 +197,7 @@ body {
 
 .business {
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .business-list {
@@ -231,4 +236,52 @@ body {
   text-align: center;
   color: #333333;
   padding-bottom: 40px;
+}
+
+.blog {
+  background-color: #0284D0;
+}
+
+.blog-inner {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
+.blog-inner-text {
+  max-width: 680px;
+  padding-left: 30px;
+  color: #FFFFFF;
+}
+
+.blog-inner-img {
+  width: 50%;
+  height: auto;
+}
+
+.blog-inner-img img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  display: flex;
+}
+
+.blog-inner-text h2 {
+  font-size: 38px;
+  font-weight: 300;
+  line-height: 48px;
+  padding-bottom: 26px;
+}
+
+.blog-inner-text p {
+  padding-bottom: 17px;
+}
+
+.blog-title {
+  font-size: 20px;
+}
+
+.professional-list {
+  display: flex;
 }
