--- a/style.css
+++ b/style.css
@@ -282,6 +282,72 @@ body {
   font-size: 20px;
 }
 
+.professional {
+  text-align: center;
+}
+
 .professional-list {
   display: flex;
+}
+
+.professional-img {
+  width: 420px;
+  padding: 10px;
+}
+
+.professional-title {
+  font-weight: 400;
+  font-size: 20px;
+  color: #333333;
+  padding-top: 50px;
+}
+
+.professional-h2 {
+  font-weight: 300;
+  font-size: 38px;
+  color: #333333;
+  padding-top: 15px;
+}
+
+.professional-title2 {
+  font-weight: 400;
+  font-size: 18px;
+  color: #333333;
+  padding-top: 35px;
+  padding-bottom: 45px;
+}
+
+.professional-list h3 {
+  font-weight: 400;
+  font-size: 25px;
+  padding-bottom: 12px;
+}
+
+.professional-list p {
+  font-weight: 400;
+  font-size: 18px;
+  color: #333333;
+}
+
+.symbol {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: .3s;
+}
+
+.professional-img-container {
+  position: relative;
+}
+
+.professional-img-container:hover .symbol {
+  opacity: 1;
+  visibility: visible;
 }
